fix: hero search form z-index

--- a/assets/source/sass/search.scss
+++ b/assets/source/sass/search.scss
@@ -18,7 +18,6 @@
     position: absolute;
     width:clamp(min(100%, 600px), 30%, max(30%, 600px));
     transform: translate(-50%, -50%);
-    z-index: 1;
     left: 50%;
 
     &.c-form--centered {
@@ -34,11 +33,6 @@
     }
 
     #hero-search-form__wrapper {
-      
-
-      .c-field__inner {
-        // border:none;
-      }
 
       #hero-search-form__field {
         border-top-right-radius: 0;
